--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			   </div>
 			  
 			  <div class="list">
-			   <img src="C:\Users\DHARSHANA\Desktop\globe.avif" alt="paper photo">
+			   <img src="https://github.com/rteinfoime/media6/blob/main/globe.jpg?raw=true" alt="paper photo">
 			   <p>On the verge of migration in the vicinity of anticipated celestial terrain..<label for="ch"><a href="file:///D:/project1/proj4.html"> Show more</a></label</P>
 			  </div>
 			  
